; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ext4/extr_mballoc.c_ext4_mb_release_desc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ext4/extr_mballoc.c_ext4_mb_release_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext4_buddy = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ext4_buddy*)* @ext4_mb_release_desc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ext4_mb_release_desc(%struct.ext4_buddy* %0) #0 {
  %2 = alloca %struct.ext4_buddy*, align 8
  store %struct.ext4_buddy* %0, %struct.ext4_buddy** %2, align 8
  %3 = load %struct.ext4_buddy*, %struct.ext4_buddy** %2, align 8
  %4 = getelementptr inbounds %struct.ext4_buddy, %struct.ext4_buddy* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.ext4_buddy*, %struct.ext4_buddy** %2, align 8
  %9 = getelementptr inbounds %struct.ext4_buddy, %struct.ext4_buddy* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @page_cache_release(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.ext4_buddy*, %struct.ext4_buddy** %2, align 8
  %14 = getelementptr inbounds %struct.ext4_buddy, %struct.ext4_buddy* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %12
  %18 = load %struct.ext4_buddy*, %struct.ext4_buddy** %2, align 8
  %19 = getelementptr inbounds %struct.ext4_buddy, %struct.ext4_buddy* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @page_cache_release(i64 %20)
  br label %22

22:                                               ; preds = %17, %12
  ret void
}

declare dso_local i32 @page_cache_release(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
